www/css/style.css
/*Dialer-Directive Html Style*/

.dialer-card {
  width: 100%;
  height: 100%;
  position: fixed;
  top: 0;
  box-shadow: 0 -5px 5px 0 #e0e0e0;
  background-color: #ffffff;
}

.pane, .view {
  background-color: #f5f5f5;
}

.tab-item-active {
  color: #05c9f4;
}

.col {
  text-align: center;
  height: 55px;
  font-size: xx-large;
  color: #05c9f4;
}

.star, .pound {
  color: #aaa;
}

.star {
  padding-top: 15px;
}


.bar-header {
  background-color: #05c9f4;
  box-shadow: 0px 5px 7px #e0e0e0;
}

.list {
  border-bottom: 1px solid #e0e0e0;
}

.placeholder-icon:last-child {
  padding-left: 6px;
  padding-right: 15px;
  font-size: 30px;
}

input {
  text-align: center;
  font-size: 1em !important;
}

input[type="tel"] {
  color: grey;
  font-size: 2em;
}

textArea {
  resize: none;
}

.bar .title {
  color: white;
}

.call {
  background-color: #05c9f4;
  width: 65px;
  height: 65px;
  border-radius: 40px;
  position: fixed;
  left: 25%;
  bottom: 18%;
}

.sms {
  background-color: #05c9f4;
  width: 65px;
  height: 65px;
  border-radius: 40px;
  position: fixed;
  left: 57%;
  bottom: 18%;
}

.phoneIcon {
  font-size: 48px;
  position: fixed;
  padding-top: 9px;
  padding-left: 16px;
  color: white;
}

.smsIcon {
  font-size: 46px;
  position: fixed;
  padding-top: 10px;
  padding-left: 16px;
  color: white;
}

/*Contacts.html Style*/

.contactsView {
  background-color: #f5f5f5;
}

.avatar{
  width: 50px;
  height: 50px;
  background-color: #e0e0e0;
  border-radius: 30px;
}

.avatarPhoto {
  font-size: 54px !important;
  padding-left: 2.9%;
  color: #9e9e9e;
  position: absolute;
}


.contactName {
  float: inherit;
  padding-left: 150%;
  padding-top: 30px;
}

.names {
  font-weight: bold;
}

.swipeButton {
  background-color: #18ffff;
  width: 65px;
  height: 65px;
  border-radius: 40px;
  position: fixed;
  left: 75%;
  bottom: 3%;
  box-shadow: -2px 3px 5px 0px #bdbdbd;
}

#swipeText {
  padding-top: 18px;
  font-size: xx-large;
  padding-left: 22px;
  color: #ffff00;
}


/*Settings.html Style*/

.settingsSwipeButton {
  background-color: #18ffff;
  width: 65px;
  height: 65px;
  border-radius: 40px;
  position: absolute;
  left: 0%;
  bottom: -60%;
  box-shadow: -2px 3px 5px 0px #bdbdbd;
}

#settingsSwipeText {
  padding-top: 18px;
  font-size: xx-large;
  padding-left: 22px;
  color: #ffff00;
}

/*Contact-info.html Style*/

.infoBanner {
  width: 100%;
  height: 9%;
  position: fixed;
  background: white;
  border-bottom: 1px solid #aaa;
}


.infoAvatar{
  float: left;
  width: 75px;
  height: 75px;
  background-color: #e0e0e0;
  border-radius: 50px;
  margin-left: 20px;
}

.infoAvatarPhoto {
  font-size: 80px !important;
  padding-left: 3.9%;
  color: #9e9e9e;
  position: fixed;
}

.infoContactName {
  float: left;
  font-size: 26px;
  color: #aaa;
  padding-top: 28px;
  padding-left: 12px;
  display: inline;
}

.ion-ios7-arrow-back {
  font-size: 40px;
  padding-left: 10px;
  color: #05c9f4;
}

.arrow-back-text {
  position: fixed;
  padding-top: 10px;
  padding-left: 10px;
  font-size: 24px;
}

.contactInfoList {
  margin-top: 70px;
  height: 180px;
  border-bottom: 1px solid lightgrey;
  position: relative;
}

/*Login.html Style*/

.loginform {
  background-color: white !important;
}

.ion-ios7-telephone-outline, .ion-ios7-chatbubble-outline {
  padding-top: 6.5%;
  font-size: 55px;
  color: #05c9f4;
  position: fixed;
}

.ion-ios7-telephone-outline{
  right: 5%;
}

.ion-ios7-chatbubble-outline {
  right: 22%;
}

.login{
  background-color: #f5f5f5;
}

.logininfo {
  background-color: #f5f5f5 !important;
  border-color: #ddd !important;
  color:black !important;
}

.loginbar {
  border-color: #05c9f4 !important;
  background-color: #05c9f4 !important;
  margin: 0 !important;
}

.contactInfo {
  padding-left: 6%;
  padding-top: 7%;
  color: #525252;
  position: fixed;
}

.contactInfoLabel {
  font-size: 18px;
  color: #aaa;
}

.contactInfoNumber {
  padding-top: 4%;
  font-size: 27px;
}

.contactPhoneInfo {
  margin-top: 80px;
  margin-bottom: 15px;
  clear: both;
}

.popupButtonText {
  font-size: 24px;
}

.button-positive {
  background-color: #05c9f4 !important;
  border-color: #aaa !important;
}

